# gfmodules-pseudoniemendienst

./: .dockerignore  .gitignore  ENDPOINTS.md  Makefile  README.md  app.ci.conf  app.conf  app.conf.autopilot  app.conf.example  app.test.conf  auth_cert.json.example  docker-compose.yaml  publiccode.yml  pyproject.toml  requirements.txt  sonar-project.properties
.github/: CODEOWNERS
.github/workflows/: ci.yaml  release-docker.yaml  release-package-venv.yaml  release-package.yaml
app/: application.py  auth.py  bsn.py  cleanup.py  config.py  container.py  data.py  generate-oprf-key.py  personal_id.py  prs_types.py  rid.py  types.py
app/db/: __init__.py  db.py  decorator.py  session.py
app/db/entities/: base.py  hsm_key_versions.py  key_entry.py  organization.py  organization_key.py
app/db/repositories/: hsm_key_version_repository.py  key_entry_repository.py  org_key_repository.py  org_repository.py  repository_base.py
app/db/types/: oin.py
app/logging/: config_builder.py  context.py  events.py  filters.py  formatter.py  middleware.py
app/middleware/: auth_required.py
app/models/: oin.py  requests.py  ura.py
app/models/adjacency/: adjacency_map.py  node.py
app/models/auth/: context.py  data.py  headers.py
app/models/directory/: dto.py
app/models/fhir/: types.py
app/models/resource_map/: dto.py  query_params.py
app/routers/: bpg.py  default.py  exchange.py  health.py  hsm_key_version.py  key.py  oprf.py  org.py  rid.py  test_oprf.py
app/routers/administration/: hsm_key_version.py  key.py
app/services/: auth_cert_service.py  bpg_service.py  client_oauth.py  hsm_key_cleanup_service.py  hsm_key_version_service.py  iv_service.py  jwe.py  key_resolver.py  mtls_service.py  org_service.py  pdn_service.py  pseudonym_service.py  rid_cache.py  rid_service.py  tls_service.py  tmp_rid_service.py
app/services/auth/: header.py  headers.py
app/services/crypto/: crypto_service.py  hsm_api_crypto_service.py  hsm_crypto_service.py  json_keystore.py  memory_crypto_service.py
app/services/oprf/: jwe_token.py  oprf_service.py
app/utils/certificates/: exceptions.py  utils.py
docker/: Dockerfile  httpd-ssl.conf  httpd.conf  init.sh
docs/: component-crypto.md  endpoints.md  flow.md  hsm-key-cleanup.md  oprf-eval-flow.md  privacy-release-checklist.md  qa-release-checklist.md  release-process.md  security-release-checklist.md  tests.md  trust-model.md
oprf/: Makefile  README.md  client.py  jwtoken.py  models.py  private.pem  processor.py  prs.key  prs.py  public.pem  pyproject.toml  receiver.py
sql/: 001-initial.sql  002-key-entry.sql  003-level.sql  004-org.sql  005-hsm-key-version.sql  006-hsm-key-version-org.sql  007-key-id.sql  007-org-oin.sql  008-hsm-key-version-indexes.sql  008-hsm-key-version-oin.sql
tests/: conftest.py  helpers.py  test_administration_auth.py  test_administration_key_router.py  test_auth.py  test_bsn.py  test_certificates.py  test_cleanup.py  test_config.py  test_container.py  test_default_router.py  test_health_router.py  test_hsm_key_cleanup_service.py  test_hsm_key_version_integration.py  test_hsm_key_version_router.py  test_hsm_key_version_service.py  test_key_repository.py  test_key_resolver.py  test_key_router.py  test_log_config_builder.py  test_logging_events.py  test_openapi.py  test_oprf_integration.py  test_oprf_test_router.py  test_personal_id.py  test_pseudonym_service.py  test_requests.py  test_rid_router.py  test_rid_service.py  test_stream_routing.py  test_sys_events.py
tools/: download_certs.sh  generate_certs.sh  generate_mtls_certs.sh  hsm_init.sh  migrate_db.sh  openssl-ca.cnf  openssl-ev.cnf  openssl-ov.cnf
