[tool.poetry]
name = "gfmodules-prs"
version = "0.1.0"
description = ""
license = "EUPL-1.2"
authors = ["Ministerie van Volksgezondheid, Welzijn en Sport"]
repository = "https://github.com/minvws/gfmodules-prs-private"
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.35.0"
fastapi = "^0.116"
async-timeout = "5.0.1"
mypy = "^1.18.1"
pydantic-settings = "^2.10.1"
inject = "^5.3.0"
pycryptodome = "^3.23.0"
pydantic = "^2.11.9"
redis = "^6.4.0"
cryptography = "^45.0.7"
cffi = "^1.17.1"
pykcs11 = "^1.5.18"
filelock = "^3.19.1"
asn1crypto = "^1.5.1"
validators = "^0.35.0"
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^6.3.0"
pytest-mock = "^3.15.0"
httpx = "^0.28.1"
ruff = "^0.13.0"
safety = "^3.2.3"
codespell = "^2.2.6"
types-requests = "^2.32.4.20250809"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
cache-dir = "~/.cache/ruff"
include = [
    "pyproject.toml",
    "app/*.py",
    "tests/*.py",
]

[tool.mypy]
files = "app,tests"
python_version = "3.11"
strict = true
cache_dir = "~/.cache/mypy"
ignore_missing_imports = true

[tool.pytest.ini_options]
cache_dir = "~/.cache/pytest"
testpaths = [
    "tests",
]
