[tool.poetry]
name = "prs-tng"
version = "0.1.0"
description = ""
authors = ["Joshua Thijssen <jthijssen@noxlogic.nl>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pyoprf = "^0.9.3"
uvicorn = "^0.40.0"
fastapi = "^0.129"
pydantic = "^2.11.7"
pyjwt = "^2.12.0"
jwcrypto = "^1.5.7"
requests = "^2.33.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
